Changelog
=========

3.1 - (2022-11-28)
---------------------------
* Change: fix: add missing file
  [razvanMiu]

3.0 - (2022-10-05)
---------------------------
* Change: Fix query parser
  [razvanMiu]

2.9 - (2022-09-16)
---------------------------
* Change: Don't use collate for 'in' and 'nin' sql operations
  [razvanMiu]

2.8 - (2022-08-22)
---------------------------
* Change: Allow extra conditions
  [razvanMiu]

2.7 - (2022-08-12)
---------------------------
* Change: Develop
  [andreiggr]

2.6 - (2022-08-12)
---------------------------
* Change: Arcgis Map Visualization Content-type
  [andreiggr]

2.5 - (2022-07-26)
---------------------------
* Change: Set default value for data_query
  [razvanMiu]

2.4 - (2022-06-22)
---------------------------
* Change: Remove python version requirement
  [razvanMiu]

2.3 - (2022-03-10)
---------------------------
* Change: Fix edge case for parsing query
  [razvanMiu]

2.2 - (2022-02-03)
---------------------------
* Change: Filter csv by data_query
  [razvanMiu]

2.1 - (2022-01-31)
---------------------------
* Change: Patch #1
  [razvanMiu]

2.0 - (2022-01-31)
---------------------------
* Change: Removed caching data in memcached for now
  [razvanMiu]

1.9 - (2022-01-31)
---------------------------
* Change: Improved connectors
  [razvanMiu]

1.8 - (2021-11-25)
---------------------------
* Change: Modified behavior name and redefined some imports
  [eugentripon refs #139888]

1.7 - (2021-11-22)
---------------------------
* Change: Moved dataconnector code from eea.restapi to here
  [eugentripon refs #139888]

1.6 - (2021-10-06)
---------------------------
* Change: Fix history
  [iulianpetchesi refs #139888]

1.5 - (2021-10-04)
---------------------------
* Change: Use '*' to delimit the table from the parameter [razvanMiu]

1.4 - (2021-06-28)
---------------------------
* Change: Develop
  [razvanMiu]

1.3 - (2021-06-23)
---------------------------
* Change: Removed comments from query before parsing
  [razvanMiu]