@@ -2,4 +2,6 @@
 <object name="portal_types" meta_type="Plone Types Tool">
   <object name="map_visualization" meta_type="Dexterity FTI" />
   <object name="tableau_visualization" meta_type="Dexterity FTI" />
+  <object name="discodataconnector" meta_type="Dexterity FTI" />
+  <object name="visualization" meta_type="Dexterity FTI" />
 </object>
