@@ -1,0 +1,50 @@
+<?xml version="1.0" encoding="utf-8"?>
+<object name="discodataconnector" meta_type="Dexterity FTI"
+  i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+  <property name="title" i18n:translate="">Discodata Connector</property>
+  <property name="icon_expr">string:${portal_url}/document_icon.png</property>
+  <property name="factory">discodataconnector</property>
+  <property
+    name="add_view_expr">string:${folder_url}/++add++discodataconnector</property>
+  <property name="link_target"></property>
+  <property name="immediate_view">view</property>
+  <property name="global_allow">True</property>
+  <property name="filter_content_types">True</property>
+  <property name="allowed_content_types"/>
+  <property name="allow_discussion">False</property>
+  <property name="default_view">view</property>
+  <property name="view_methods">
+    <element value="view"/>
+  </property>
+  <property name="default_view_fallback">False</property>
+  <property name="add_permission">cmf.AddPortalContent</property>
+  <property name="klass">plone.dexterity.content.Container</property>
+  <property name="behaviors">
+    <element value="plone.dublincore"/>
+    <element value="plone.namefromtitle"/>
+    <element value="discodata.connector"/>
+  </property>
+  <property name="schema"></property>
+  <property name="model_source">
+    &lt;model xmlns=&quot;http://namespaces.plone.org/supermodel/schema&quot;&gt;
+    &lt;schema&gt;
+    &lt;/schema&gt;
+    &lt;/model&gt;</property>
+  <property name="model_file"></property>
+  <property name="schema_policy">dexterity</property>
+  <alias from="(Default)" to="(dynamic view)"/>
+  <alias from="edit" to="@@edit"/>
+  <alias from="sharing" to="@@sharing"/>
+  <alias from="view" to="(selected layout)"/>
+  <action title="View" action_id="view" category="object" condition_expr=""
+    icon_expr="" link_target="" url_expr="string:${object_url}"
+    visible="True">
+    <permission value="View"/>
+  </action>
+  <action title="Edit" action_id="edit" category="object" condition_expr=""
+    icon_expr="" link_target="" url_expr="string:${object_url}/edit"
+    visible="True">
+    <permission value="Modify portal content"/>
+  </action>
+</object>
+
