@@ -1,0 +1,57 @@
+<?xml version="1.0" encoding="utf-8"?>
+<object name="visualization" meta_type="Dexterity FTI" i18n:domain="plone"
+   xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+ <property name="title" i18n:translate="">Visualization</property>
+ <property name="icon_expr"></property>
+ <property name="factory">visualization</property>
+ <property
+    name="add_view_expr">string:${folder_url}/++add++visualization</property>
+ <property name="link_target"></property>
+ <property name="immediate_view">view</property>
+ <property name="global_allow">True</property>
+ <property name="filter_content_types">True</property>
+ <property name="allowed_content_types"/>
+ <property name="allow_discussion">False</property>
+ <property name="default_view">view</property>
+ <property name="view_methods">
+ </property>
+ <property name="default_view_fallback">False</property>
+ <property name="add_permission">plone.app.contenttypes.addDocument</property>
+ <property
+    name="klass">collective.folderishtypes.dx.content.FolderishDocument</property>
+ <property name="behaviors">
+  <element value="plone.namefromtitle"/>
+  <element value="plone.allowdiscussion"/>
+  <element value="plone.excludefromnavigation"/>
+  <element value="plone.shortname"/>
+  <element value="plone.dublincore"/>
+  <element value="plone.richtext"/>
+  <element value="plone.relateditems"/>
+  <element value="plone.versioning"/>
+  <element value="plone.tableofcontents"/>
+  <element value="plone.locking"/>
+  <element
+     value="Products.CMFPlone.interfaces.constrains.ISelectableConstrainTypes"/>
+  <element value="eea.restapi.visualization"/>
+ </property>
+ <property name="schema"></property>
+ <property name="model_source"></property>
+ <property
+    name="model_file">plone.app.contenttypes.schema:document.xml</property>
+ <property name="schema_policy">dexterity</property>
+ <alias from="(Default)" to="(dynamic view)"/>
+ <alias from="edit" to="@@edit"/>
+ <alias from="sharing" to="@@sharing"/>
+ <alias from="view" to="(selected layout)"/>
+ <action title="View" action_id="view" category="object" condition_expr=""
+    icon_expr="" link_target="" url_expr="string:${object_url}"
+    visible="True">
+  <permission value="View"/>
+ </action>
+ <action title="Edit" action_id="edit" category="object" condition_expr=""
+    icon_expr="" link_target="" url_expr="string:${object_url}/edit"
+    visible="True">
+  <permission value="Modify portal content"/>
+ </action>
+</object>
+
